--- a/site.css
+++ b/site.css
@@ -1,34 +1,58 @@
 /* site.css */
 
-html,
 body {
-	padding: 0;
-	margin: 0;
+	font-family: "Oswald", sans-serif;
 }
 
-h1,
-img {
+.top-bar {
 	margin: 0;
 	padding: 0;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 999;
+}
+
+#middle {
+	display: table;
+	padding-top: 60px;
+}
+
+.page-centered {
+	position: relative;
+	width: 70%;
+	margin: 0 auto;
+}
+
+.top-bar h1,
+.top-bar img {
 	position: absolute;
-	top: 7px;
 }
 
-h1 {
+.top-bar h1 {
+	top: -9px;
 	font-size: 30px;
-	left: 45px;
+	left: 50px;
+}
+
+.top-bar img {
+	position: absolute;
+	height: 37px;
+	left: 0;
+	top: 12px;
+}
+
+.top-bar rect {
+	stroke: #fff;
 }
 
 h2 {
 	font-size: 20px;
 }
 
-img {
-	top: 15px;
-}
-
-body {
-	font-family: "Oswald", sans-serif;
+input {
+	vertical-align: middle;
 }
 
 header,
@@ -43,18 +67,20 @@ h1 > link {
 }
 
 #reset-button {
-	position: fixed;
+	position: absolute;
 	top: 10px;
-	left: 1100px;
+	right: 0;
+	border: 1px solid #fff;
 	height: 35px;
 	width: 100px;
 	color: white;
-	background-color: rgb(158, 50, 0);
+	background-color: rgb(216, 140, 0);
+	cursor: pointer;
 	font-size: 18px;
 }
 
-#middle {
-	padding-top: 60px;
+#reset-button:hover {
+	background-color: orange;
 }
 
 section {
@@ -67,10 +93,6 @@ footer {
 	font-family: "Oswald", sans-serif;
 	font-weight: 200px;
 	text-align: center;
-}
-
-form {
-	padding: 25px;
 }
 
 .usualitems {
@@ -105,7 +127,8 @@ ul {
 }
 
 .transparent-border {
-	width: 550px;
+	float: left;
+	width: 53%;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border-right: solid darkgray 2px;
@@ -134,14 +157,13 @@ ul {
 }
 
 .containerfield {
-	width: 1100px;
-	margin: 0 auto;
-	background-color: white;
+	margin: 0;
 }
 
 #grocery-list {
 	padding-left: 10px;
-	width: 400px;
+	float: right;
+	width: 43%;
 	display: inline-block;
 	vertical-align: top;
 	font-size: 24px;
